--- a/public/output.css
+++ b/public/output.css
@@ -686,6 +686,10 @@ video {
   top: 20rem;
 }
 
+.top-\[30\%\] {
+  top: 30%;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -704,6 +708,11 @@ video {
 
 .m-auto {
   margin: auto;
+}
+
+.my-6 {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .mb-2 {
@@ -734,6 +743,14 @@ video {
   margin-top: 1rem;
 }
 
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .block {
   display: block;
 }
@@ -760,6 +777,10 @@ video {
 
 .h-28 {
   height: 7rem;
+}
+
+.h-60 {
+  height: 15rem;
 }
 
 .h-8 {
@@ -858,6 +879,14 @@ video {
   width: 100%;
 }
 
+.w-32 {
+  width: 8rem;
+}
+
+.max-w-\[1000px\] {
+  max-width: 1000px;
+}
+
 .max-w-\[1200px\] {
   max-width: 1200px;
 }
@@ -868,6 +897,10 @@ video {
 
 .max-w-\[400px\] {
   max-width: 400px;
+}
+
+.max-w-\[600px\] {
+  max-width: 600px;
 }
 
 .max-w-\[700px\] {
@@ -886,6 +919,14 @@ video {
   max-width: 900px;
 }
 
+.max-w-\[\] {
+  max-width: ;
+}
+
+.max-w-\[120\] {
+  max-width: 120;
+}
+
 .flex-auto {
   flex: 1 1 auto;
 }
@@ -896,6 +937,10 @@ video {
 
 .basis-\[70\%\] {
   flex-basis: 70%;
+}
+
+.border-separate {
+  border-collapse: separate;
 }
 
 .-translate-y-1\/2 {
@@ -953,6 +998,10 @@ video {
 
 .flex-wrap {
   flex-wrap: wrap;
+}
+
+.place-items-center {
+  place-items: center;
 }
 
 .items-center {
@@ -1055,6 +1104,10 @@ video {
   border-radius: 0.25rem;
 }
 
+.rounded-\[3rem\] {
+  border-radius: 3rem;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -1108,6 +1161,18 @@ video {
   border-top-width: 1px;
 }
 
+.border-r {
+  border-right-width: 1px;
+}
+
+.border-dashed {
+  border-style: dashed;
+}
+
+.border-dotted {
+  border-style: dotted;
+}
+
 .border-black {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
@@ -1141,6 +1206,26 @@ video {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.border-gray-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity));
+}
+
+.border-gray-900 {
+  --tw-border-opacity: 1;
+  border-color: rgb(17 24 39 / var(--tw-border-opacity));
+}
+
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .bg-gray-100 {
@@ -1202,6 +1287,18 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-cover {
+  background-size: cover;
+}
+
+.bg-center {
+  background-position: center;
+}
+
+.bg-no-repeat {
+  background-repeat: no-repeat;
+}
+
 .p-6 {
   padding: 1.5rem;
 }
@@ -1246,6 +1343,11 @@ video {
   padding-bottom: 2.5rem;
 }
 
+.py-14 {
+  padding-top: 3.5rem;
+  padding-bottom: 3.5rem;
+}
+
 .py-16 {
   padding-top: 4rem;
   padding-bottom: 4rem;
@@ -1274,6 +1376,16 @@ video {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
+}
+
+.px-16 {
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
+
+.px-24 {
+  padding-left: 6rem;
+  padding-right: 6rem;
 }
 
 .pb-10 {
@@ -1446,6 +1558,10 @@ video {
   font-size: 3rem;
 }
 
+.text-\[4rem\] {
+  font-size: 4rem;
+}
+
 .text-\[7rem\] {
   font-size: 7rem;
 }
@@ -1544,8 +1660,16 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-\[\] {
+  color: ;
+}
+
 .underline {
   text-decoration-line: underline;
+}
+
+.opacity-60 {
+  opacity: 0.6;
 }
 
 .shadow-2xl {
@@ -1720,6 +1844,26 @@ input[type="search"]::-webkit-search-cancel-button {
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-gray-200:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-gray-50:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-gray-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-gray-500:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+}
+
 .hover\:text-blue-800:hover {
   --tw-text-opacity: 1;
   color: rgb(30 64 175 / var(--tw-text-opacity));
@@ -1728,6 +1872,16 @@ input[type="search"]::-webkit-search-cancel-button {
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.hover\:text-gray-900:hover {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
+.hover\:text-gray-200:hover {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
 .hover\:transition:hover {
@@ -1817,6 +1971,14 @@ input[type="search"]::-webkit-search-cancel-button {
     width: 100%;
   }
 
+  .md\:max-w-\[350px\] {
+    max-width: 350px;
+  }
+
+  .md\:max-w-\[400px\] {
+    max-width: 400px;
+  }
+
   .md\:max-w-\[500px\] {
     max-width: 500px;
   }
@@ -1853,8 +2015,30 @@ input[type="search"]::-webkit-search-cancel-button {
     gap: 1rem;
   }
 
+  .md\:gap-0 {
+    gap: 0px;
+  }
+
   .md\:rounded-lg {
     border-radius: 0.5rem;
+  }
+
+  .md\:border {
+    border-width: 1px;
+  }
+
+  .md\:border-r {
+    border-right-width: 1px;
+  }
+
+  .md\:bg-gray-300 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+  }
+
+  .md\:bg-gray-400 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(156 163 175 / var(--tw-bg-opacity));
   }
 
   .md\:px-6 {
@@ -1870,6 +2054,11 @@ input[type="search"]::-webkit-search-cancel-button {
   .md\:py-4 {
     padding-top: 1rem;
     padding-bottom: 1rem;
+  }
+
+  .md\:px-24 {
+    padding-left: 6rem;
+    padding-right: 6rem;
   }
 
   .md\:pl-7 {
@@ -1914,6 +2103,10 @@ input[type="search"]::-webkit-search-cancel-button {
     top: 9rem;
   }
 
+  .lg\:m-0 {
+    margin: 0px;
+  }
+
   .lg\:mt-0 {
     margin-top: 0px;
   }
@@ -1934,6 +2127,12 @@ input[type="search"]::-webkit-search-cancel-button {
     width: 1000px;
   }
 
+  .lg\:w-fit {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+
   .lg\:max-w-\[1000px\] {
     max-width: 1000px;
   }
@@ -1950,8 +2149,20 @@ input[type="search"]::-webkit-search-cancel-button {
     max-width: 900px;
   }
 
+  .lg\:max-w-\[\] {
+    max-width: ;
+  }
+
+  .lg\:max-w-\[12\] {
+    max-width: 12;
+  }
+
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:flex-row {
+    flex-direction: row;
   }
 
   .lg\:gap-6 {
@@ -1978,6 +2189,16 @@ input[type="search"]::-webkit-search-cancel-button {
     padding-right: 0px;
   }
 
+  .lg\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .lg\:py-16 {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+  }
+
   .lg\:pb-20 {
     padding-bottom: 5rem;
   }
@@ -1992,6 +2213,10 @@ input[type="search"]::-webkit-search-cancel-button {
 
   .lg\:pt-\[4\.3rem\] {
     padding-top: 4.3rem;
+  }
+
+  .lg\:text-start {
+    text-align: start;
   }
 
   .lg\:text-\[1\.2rem\] {
@@ -2018,8 +2243,16 @@ input[type="search"]::-webkit-search-cancel-button {
     margin-right: -17px;
   }
 
+  .sl\:h-72 {
+    height: 18rem;
+  }
+
   .sl\:max-w-\[1200px\] {
     max-width: 1200px;
+  }
+
+  .sl\:max-w-\[500px\] {
+    max-width: 500px;
   }
 
   .sl\:bg-transparent {
