--- a/public/output.css
+++ b/public/output.css
@@ -2114,9 +2114,22 @@ input[type="search"]::-webkit-search-cancel-button {
     gap: 1.5rem;
   }
 
+  .lg\:rounded-md {
+    border-radius: 0.375rem;
+  }
+
   .lg\:rounded-t-lg {
     border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem;
+  }
+
+  .lg\:border {
+    border-width: 1px;
+  }
+
+  .lg\:bg-gray-300 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(209 213 219 / var(--tw-bg-opacity));
   }
 
   .lg\:bg-gray-600 {
@@ -2148,12 +2161,20 @@ input[type="search"]::-webkit-search-cancel-button {
     padding-bottom: 5rem;
   }
 
+  .lg\:pb-6 {
+    padding-bottom: 1.5rem;
+  }
+
   .lg\:pt-0 {
     padding-top: 0px;
   }
 
   .lg\:pt-32 {
     padding-top: 8rem;
+  }
+
+  .lg\:pt-9 {
+    padding-top: 2.25rem;
   }
 
   .lg\:pt-\[4\.3rem\] {
@@ -2166,6 +2187,11 @@ input[type="search"]::-webkit-search-cancel-button {
 
   .lg\:text-\[1\.2rem\] {
     font-size: 1.2rem;
+  }
+
+  .lg\:text-gray-200 {
+    --tw-text-opacity: 1;
+    color: rgb(229 231 235 / var(--tw-text-opacity));
   }
 }
 
