--- a/public/output.css
+++ b/public/output.css
@@ -1933,6 +1933,18 @@ body {
   width: 100px;
 }
 
+/* #one .swiper-pagination .swiper-pagination-bullet {
+    opacity: 1;
+    background-color: black;
+    border: 4px solid black;
+}
+
+#one .swiper-pagination .swiper-pagination-bullet-active {
+    opacity: 0.4;
+    background-color: #333333;
+    border: 4px solid black;
+} */
+
 .placeholder\:text-xl::placeholder {
   font-size: 1.25rem;
   line-height: 1.75rem;
