--- a/src/input.css
+++ b/src/input.css
@@ -401,3 +401,18 @@ body {
     top: 0;
     width: 100px;
 }
+
+
+
+
+/* #one .swiper-pagination .swiper-pagination-bullet {
+    opacity: 1;
+    background-color: black;
+    border: 4px solid black;
+}
+
+#one .swiper-pagination .swiper-pagination-bullet-active {
+    opacity: 0.4;
+    background-color: #333333;
+    border: 4px solid black;
+} */
